--- a/TODO
+++ b/TODO
@@ -1,1 +1,6 @@
 AWS Hosting with more census data from Ian
+
+Restore:
+rm 'data/db-handling.ipynb'
+rm 'data/schema-description.json'
+rm 'data/schema-description.txt'
