Display only useful columns

--- a/database1.ipynb
+++ b/database1.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9d/jc2663851_lgqff4sx4jlfz40000gn/T/ipykernel_77656/2220086727.py:15: MovedIn20Warning: The ``declarative_base()`` function is now available as sqlalchemy.orm.declarative_base(). (deprecated since: 2.0) (Background on SQLAlchemy 2.0 at: https://sqlalche.me/e/b8d9)\n",
+      "/var/folders/9d/jc2663851_lgqff4sx4jlfz40000gn/T/ipykernel_94938/2220086727.py:15: MovedIn20Warning: The ``declarative_base()`` function is now available as sqlalchemy.orm.declarative_base(). (deprecated since: 2.0) (Background on SQLAlchemy 2.0 at: https://sqlalche.me/e/b8d9)\n",
       "  Base = declarative_base()\n"
      ]
     },
@@ -19,7 +19,8 @@
      "text": [
       "Table census2022-uv205-ctry already exists and is not empty. Skipping insertion.\n",
       "Table census2022-uv205-ca already exists and is not empty. Skipping insertion.\n",
-      "Inserted data from census2022-uv205-oa.csv into table census2022-uv205-oa\n"
+      "Table census2022-uv205-oa already exists and is not empty. Skipping insertion.\n",
+      "Inserted data from census2022-uv205-izn.csv into table census2022-uv205-izn\n"
      ]
     }
    ],
