got llmquery working for new schema

--- a/scripts/ops.ipynb
+++ b/scripts/ops.ipynb
@@ -5,6 +5,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -592,6 +599,93 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data inserted successfully into table_titles.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import psycopg2\n",
+    "from psycopg2 import sql\n",
+    "import dotenv\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Load environment variables\n",
+    "dotenv.load_dotenv()\n",
+    "\n",
+    "# Retrieve the database connection URL from the environment variables.\n",
+    "db_url = os.getenv('DATABASE_URI')\n",
+    "\n",
+    "# Path to the JSON file\n",
+    "json_file_path = Path('../api/table_titles.json')\n",
+    "\n",
+    "# Load JSON data\n",
+    "with open(json_file_path, 'r') as file:\n",
+    "    data = json.load(file)\n",
+    "\n",
+    "# Function to create the table_titles table\n",
+    "def create_table_titles_table(cursor):\n",
+    "    create_table_query = \"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS table_titles (\n",
+    "        country TEXT NOT NULL,\n",
+    "        code TEXT NOT NULL,\n",
+    "        name TEXT NOT NULL,\n",
+    "        PRIMARY KEY (country, code)\n",
+    "    );\n",
+    "    \"\"\"\n",
+    "    cursor.execute(create_table_query)\n",
+    "\n",
+    "# Function to insert data into the table_titles table\n",
+    "def insert_table_titles_data(cursor, country, name, code):\n",
+    "    insert_query = \"\"\"\n",
+    "    INSERT INTO table_titles (country, code, name)\n",
+    "    VALUES (%s, %s, %s)\n",
+    "    ON CONFLICT (country, code) DO NOTHING;\n",
+    "    \"\"\"\n",
+    "    cursor.execute(insert_query, (country, code.lower(), name))\n",
+    "\n",
+    "# Main function to process the JSON data and insert it into the table\n",
+    "def process_json_data(data):\n",
+    "    try:\n",
+    "        # Connect to the PostgreSQL database\n",
+    "        conn = psycopg2.connect(db_url)\n",
+    "        cursor = conn.cursor()\n",
+    "        \n",
+    "        # Create the table_titles table if it doesn't exist\n",
+    "        create_table_titles_table(cursor)\n",
+    "        \n",
+    "        # Insert data into the table_titles table\n",
+    "        for country, titles in data.items():\n",
+    "            for name, code in titles.items():\n",
+    "                insert_table_titles_data(cursor, country, code, name)\n",
+    "        \n",
+    "        # Commit the transaction\n",
+    "        conn.commit()\n",
+    "        print(\"Data inserted successfully into table_titles.\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing JSON data: {e}\")\n",
+    "        if conn:\n",
+    "            conn.rollback()\n",
+    "    finally:\n",
+    "        if cursor:\n",
+    "            cursor.close()\n",
+    "        if conn:\n",
+    "            conn.close()\n",
+    "\n",
+    "# Process the JSON data\n",
+    "process_json_data(data)"
    ]
   },
   {
