Added display for new data

--- a/scripts/ops.ipynb
+++ b/scripts/ops.ipynb
@@ -776,6 +776,41 @@
     "for col, values in unique_values.items():\n",
     "    print(f\"{col}: {len(values)} unique values\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['alliance', 'alliance_(northern_ireland)', 'common_wealth_movement', 'communist', 'constitutionalist', 'dup_(uuuc)', 'independent', 'independent_conservative', 'independent_labour', 'independent_labour_party', 'independent_liberal', 'independent_nationalist', 'independent_unionist', 'labour_unionist_(ireland)', 'national', 'national_independent', 'national_labour', 'national_liberal', 'national_liberal/national_liberal_and_conservative', 'nationalist(wales/scotland)', 'nationalist_(ireland)', 'northern_ireland_labour_party', 'other', 'oup', 'oup_(uuuc)', 'pc/snp', 'sdlp', 'sf', 'sinn_fein', 'snp/plaid_cymru', 'ukup', 'unionist(pro-assembly)', 'unionist_(uuuc)', 'uu', 'uup', 'vanguard_unionist_progressive_party_(uuuc)', 'workers_party']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the list of historic UK political parties\n",
+    "party_columns = [\n",
+    "    'independent_labour', 'independent_conservative', 'independent_unionist', 'labour_unionist_(ireland)', 'independent_liberal', 'independent', 'national',\n",
+    "'sinn_fein', 'nationalist_(ireland)', 'independent_nationalist', 'other',\n",
+    "'national_liberal', 'communist', 'constitutionalist', 'national_labour',\n",
+    "'independent_labour_party', 'pc/snp', 'national_independent', 'common_wealth_movement',\n",
+    "'northern_ireland_labour_party', 'national_liberal/national_liberal_and_conservative',\n",
+    "'nationalist(wales/scotland)', 'snp/plaid_cymru',\n",
+    "'unionist(pro-assembly)', 'dup_(uuuc)', 'vanguard_unionist_progressive_party_(uuuc)',\n",
+    "'unionist_(uuuc)', 'sdlp', 'alliance', 'oup_(uuuc)', 'oup',\n",
+    "'alliance_(northern_ireland)', 'workers_party', 'uup',\n",
+    "'sf', 'ukup', 'uu'\n",
+    "]\n",
+    "\n",
+    "# Sort the list alphabetically\n",
+    "sorted_party_columns = sorted(party_columns)\n",
+    "\n",
+    "# Print the sorted list\n",
+    "print(sorted_party_columns)\n"
+   ]
   }
  ],
  "metadata": {
